--- a/index.html
+++ b/index.html
@@ -17,45 +17,212 @@
 
 <body class="my-component">
     <!--------------------------------------HEADER_SECTION------------------------------------------------------->
-    <header class="section sec1 home show d-flex justify-content-center align-items-center" id="home">  
-        <div class="blendimg"></div>      
+    <header class="section sec1 home show" id="home">
+        <div class="blendimg"></div>
         <div class="header-content">
-           <div class="left-header">  <!--Left side home -->
-               <h1 class="name">
-                   Hi I'm <span>SAGAR BERA</span>
-                 <h3>A web Delvoloper</h3> 
-               </h1>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eius fuga optio omnis error quibusdam nostrum maiores ipsa quos ab veritatis dolores illo similique blanditiis dolore praesentium beatae illum aperiam! Beatae eveniet iste unde.</p>
-               <div class="btn-con">
-                   <a href="files/cv.pdf" class="main-btn">
-                   <span class="btn-text">Download CV</span>
-                   <span class="btn-icon"><i class="fa fa-download" aria-hidden="true"></i></span>
-                </a>
-               </div>
+            <div class="left-header">
+                <!--Left side home -->
+                <h1 class="name">
+                    Hi I'm <br/><span>SAGAR BERA</span>                
+                </h1> 
+                <h3>A Passionate Designer</h3>               
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eius fuga optio omnis error quibusdam
+                    nostrum maiores ipsa quos ab veritatis dolores illo similique blanditiis dolore praesentium beatae
+                    illum aperiam! Beatae eveniet iste unde.</p>
+                <div class="btn-con">
+                    <a href="files/cv.pdf" class="main-btn">
+                        <span class="btn-text">Download CV</span>
+                        <span class="btn-icon"><i class="fa fa-download" aria-hidden="true"></i></span>
+                    </a>
+                </div>
             </div>
-            <div class="right-header"> <!--Right Side home -->
+            <div class="right-header">
+                <!--Right Side home -->
                 <div class="shape triangle"></div>
                 <div class="shape triangle2"></div>
                 <div class="triangle3 popdown">
                     <div class="img"></div>
                 </div>
-           </div>
+            </div>
         </div>
     </header>
     <!--------------------------------------MAIN_SECTION--------------------------------------------------------->
     <main>
-        <section class="section sec2 about" id="about"></section>
+        <section class="section sec2 about" id="about">
+            <div class="main-title">
+                <h1>About <span>ME</span><span class="bgtxt">My Stats</span></h1>
+            </div>
+            <div class="about-container ">
+                <div class="l-con">
+                    <h4><span> Information</span> about me</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati vel incidunt cumque
+                        distinctio! Aliquid quia reiciendis, inventore vel architecto eius assumenda saepe, voluptates
+                        possimus aspernatur, alias omnis rem voluptate sunt praesentium voluptatibus neque totam.
+                        Perspiciatis culpa ex nisi non, sit error, exercitationem dolorem optio nobis deleniti ullam,
+                        amet similique eveniet.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur earum itaque aliquam libero iste doloribus magni est, quas sapiente recusandae tenetur nisi qui dicta illo?</p>
+                    <div class="btn">
+                    <div class="btn-con">
+                        <a href="files/cv.pdf" class="main-btn">
+                            <span class="btn-text">Download CV</span>
+                            <span class="btn-icon"><i class="fa fa-download" aria-hidden="true"></i></span>
+                        </a>
+                    </div>
+                    </div>
+                </div>
+                <div class="r-con">
+                    <div class="abt-item">
+                        <div class="abt-txt">
+                            <h2 class="large-txt">1+</h2>
+                            <p class="small-txt">Project <br /> Completed</p>
+                        </div>
+                    </div>
+                    <div class="abt-item">
+                        <div class="abt-txt">
+                            <h2 class="large-txt">50+</h2>
+                            <p class="small-txt">Project <br /> Completed</p>
+                        </div>
+                    </div>
+                    <div class="abt-item">
+                        <div class="abt-txt">
+                            <h2 class="large-txt">200+</h2>
+                            <p class="small-txt">Project <br /> Completed</p>
+                        </div>
+                    </div>
+                    <div class="abt-item">
+                        <div class="abt-txt">
+                            <h2 class="large-txt">150+</h2>
+                            <p class="small-txt">Project <br /> Completed</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="skill-title">
+                <h1>My <span>Skills</span><span class="bg-txt">Coding</span></h1>
+            </div>
+            <div class="quality-section">
+            <div class="skill-table "> <!--SKILL SECTION..-->
+                <div class="skill-item">
+                    <p class="skill-head">Front-End</p>
+                    <div class="prgs-bar">
+                        <div class="prg-txt">90%</div>
+                        <div class="bar">
+                            <span class="html"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-item">
+                    <p class="skill-head">Graphic Design</p>
+                    <div class="prgs-bar">
+                        <div class="prg-txt">75%</div>
+                        <div class="bar">
+                            <span class="graphic-designing"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-item">
+                    <p class="skill-head">Python</p>
+                    <div class="prgs-bar">
+                        <div class="prg-txt">80%</div>
+                        <div class="bar">
+                            <span class="python"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-item">
+                    <p class="skill-head">Bash Scripting</p>
+                    <div class="prgs-bar">
+                        <div class="prg-txt">50%</div>
+                        <div class="bar">
+                            <span class="bash"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="passion ">
+                <div class="passion-head">
+                    <h1>My <span>Pa<span>ss</span>ion</span><span class="bg-txt">DESIGNING</span></h1>
+                </div>
+                <div class="passion-table">
+                    <div class="passion-item ">
+                        <div class="passion-name">
+                            <div class="icon d-flex justify-content-center align-items-center">  
+                                <i class="fa fa-coffee" aria-hidden="true"></i>
+                            </div>
+                           <h4><span>Web</span> Developing</h4> 
+                        </div>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, doloremque? Assumenda esse debitis quos deleniti omnis qui atque architecto autem.</p>
+                    </div>
+                    <div class="passion-item ">
+                        <div class="passion-name">
+                            <div class="icon d-flex justify-content-center align-items-center">  
+                                <i class="fas fa-bezier-curve "></i>
+                            </div>
+                           <h4>Graphic <span>Designing</span></h4> 
+                        </div>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, doloremque? Assumenda esse debitis quos deleniti omnis qui atque architecto autem.</p>
+                    </div>
+                    <div class="passion-item ">
+                        <div class="passion-name">
+                            <div class="icon d-flex justify-content-center align-items-center">  
+                                <i class="fab fa-youtube"></i>                      
+                            </div>
+                           <h4>You<span>tube</span></h4> 
+                        </div>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, doloremque? Assumenda esse debitis quos deleniti omnis qui atque architecto autem.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tl-title">
+            <h4><span>Time</span>Line</h4>
+        </div>
+        <div class="timeline">
+            <div class="tl-item">
+                <div class="tl-icon">
+                    <i class="fa fa-briefcase" aria-hidden="true"></i>
+                </div>
+                <p class="tl-duration">2000 - Present</p>
+                <h5>Web Developer<span> - TechnoExponent</span></h5>
+                <p class="details">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, aspernatur porro esse voluptates consectetur vero sequi perspiciatis iste harum atque.
+                </p>
+            </div>
+            <div class="tl-item">
+                <div class="tl-icon">
+                <i class="fab fa-youtube"></i>
+                </div>
+                <p class="tl-duration">2016 - Present</p>
+                <h5>YouTuber<span> - Shadow Boy</span></h5>
+                <p class="details">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, aspernatur porro esse voluptates consectetur vero sequi perspiciatis iste harum atque.
+                </p>
+            </div>
+            <div class="tl-item">
+                <div class="tl-icon">
+                    <i class="fas fa-brush    "></i>
+                </div>
+                <p class="tl-duration">2017 - Present</p>
+                <h5>Graphic Designer<span> - Shadow Boy</span></h5>
+                <p class="details">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, aspernatur porro esse voluptates consectetur vero sequi perspiciatis iste harum atque.
+                </p>
+            </div>
+        </div>
+        </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
     </main>
     <!--------------------------------------CONTROLLER_SECTION--------------------------------------------------->
     <div class="controls d-flex flex-column justify-content-center align-items-center">
-        <div class="control control-1 activeIt" >
+        <div class="control control-1 activeIt">
             <i class="fa fa-home shift" aria-hidden="true" data-id="home"></i>
             <h3 class="float">Home</h3>
         </div>
-        <div class="control control-2" >
+        <div class="control control-2">
             <i class="fa fa-user shift" aria-hidden="true" data-id="about"></i>
             <h3 class="float">About</h3>
         </div>
@@ -63,14 +230,14 @@
             <i class="fa fa-briefcase shift" aria-hidden="true" data-id="portfolio"></i>
             <h3 class="float">Portfolio</h3>
         </div>
-        <div class="control control-4" >
+        <div class="control control-4">
             <i class="fa fa-newspaper shift" aria-hidden="true" data-id="blogs"></i>
-        <h3 class="float">Blogs</h3>
+            <h3 class="float">Blogs</h3>
         </div>
-        <div class="control control-5" >
+        <div class="control control-5">
             <i class="fa fa-envelope-open shift" aria-hidden="true" data-id="contact"></i>
             <div class="float d-flex justify-content-left align-items-center">
-               <h3 class="">Contact</h3>
+                <h3 class="">Contact</h3>
             </div>
         </div>
     </div>
