--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
 <body class="my-component">
     <!--------------------------------------HEADER_SECTION------------------------------------------------------->
-    <header class="section sec1 home show" id="home">
+    <header class="section sec1 home" id="home">
         <div class="blendimg"></div>
         <div class="header-content">
             <div class="left-header">
                 <!--Left side home -->
                 <h1 class="name">
-                    Hi I'm <br/><span>SAGAR BERA</span>                
-                </h1> 
-                <h3>A Passionate Designer</h3>               
+                    Hi I'm <br /><span class="cngtored">SAGAR BERA</span>
+                </h1>
+                <h3 class="cngtored">_<span class="role"></span> </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eius fuga optio omnis error quibusdam
                     nostrum maiores ipsa quos ab veritatis dolores illo similique blanditiis dolore praesentium beatae
                     illum aperiam! Beatae eveniet iste unde.</p>
@@ -62,14 +62,15 @@
                         Perspiciatis culpa ex nisi non, sit error, exercitationem dolorem optio nobis deleniti ullam,
                         amet similique eveniet.
                     </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur earum itaque aliquam libero iste doloribus magni est, quas sapiente recusandae tenetur nisi qui dicta illo?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur earum itaque aliquam libero
+                        iste doloribus magni est, quas sapiente recusandae tenetur nisi qui dicta illo?</p>
                     <div class="btn">
-                    <div class="btn-con">
-                        <a href="files/cv.pdf" class="main-btn">
-                            <span class="btn-text">Download CV</span>
-                            <span class="btn-icon"><i class="fa fa-download" aria-hidden="true"></i></span>
-                        </a>
-                    </div>
+                        <div class="btn-con">
+                            <a href="files/cv.pdf" class="main-btn">
+                                <span class="btn-text">Download CV</span>
+                                <span class="btn-icon"><i class="fa fa-download" aria-hidden="true"></i></span>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="r-con">
@@ -103,118 +104,186 @@
                 <h1>My <span>Skills</span><span class="bg-txt">Coding</span></h1>
             </div>
             <div class="quality-section">
-            <div class="skill-table "> <!--SKILL SECTION..-->
-                <div class="skill-item">
-                    <p class="skill-head">Front-End</p>
-                    <div class="prgs-bar">
-                        <div class="prg-txt">90%</div>
-                        <div class="bar">
-                            <span class="html"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="skill-item">
-                    <p class="skill-head">Graphic Design</p>
-                    <div class="prgs-bar">
-                        <div class="prg-txt">75%</div>
-                        <div class="bar">
-                            <span class="graphic-designing"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="skill-item">
-                    <p class="skill-head">Python</p>
-                    <div class="prgs-bar">
-                        <div class="prg-txt">80%</div>
-                        <div class="bar">
-                            <span class="python"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="skill-item">
-                    <p class="skill-head">Bash Scripting</p>
-                    <div class="prgs-bar">
-                        <div class="prg-txt">50%</div>
-                        <div class="bar">
-                            <span class="bash"></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="passion ">
-                <div class="passion-head">
-                    <h1>My <span>Pa<span>ss</span>ion</span><span class="bg-txt">DESIGNING</span></h1>
-                </div>
-                <div class="passion-table">
-                    <div class="passion-item ">
-                        <div class="passion-name">
-                            <div class="icon d-flex justify-content-center align-items-center">  
-                                <i class="fa fa-coffee" aria-hidden="true"></i>
+                <div class="skill-table ">
+                    <!--SKILL SECTION..-->
+                    <div class="skill-item">
+                        <p class="skill-head">Front-End</p>
+                        <div class="prgs-bar">
+                            <div class="prg-txt">90%</div>
+                            <div class="bar">
+                                <span class="html"></span>
                             </div>
-                           <h4><span>Web</span> Developing</h4> 
                         </div>
-                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, doloremque? Assumenda esse debitis quos deleniti omnis qui atque architecto autem.</p>
                     </div>
-                    <div class="passion-item ">
-                        <div class="passion-name">
-                            <div class="icon d-flex justify-content-center align-items-center">  
-                                <i class="fas fa-bezier-curve "></i>
+                    <div class="skill-item">
+                        <p class="skill-head">Graphic Design</p>
+                        <div class="prgs-bar">
+                            <div class="prg-txt">75%</div>
+                            <div class="bar">
+                                <span class="graphic-designing"></span>
                             </div>
-                           <h4>Graphic <span>Designing</span></h4> 
                         </div>
-                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, doloremque? Assumenda esse debitis quos deleniti omnis qui atque architecto autem.</p>
                     </div>
-                    <div class="passion-item ">
-                        <div class="passion-name">
-                            <div class="icon d-flex justify-content-center align-items-center">  
-                                <i class="fab fa-youtube"></i>                      
+                    <div class="skill-item">
+                        <p class="skill-head">Python</p>
+                        <div class="prgs-bar">
+                            <div class="prg-txt">80%</div>
+                            <div class="bar">
+                                <span class="python"></span>
                             </div>
-                           <h4>You<span>tube</span></h4> 
                         </div>
-                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, doloremque? Assumenda esse debitis quos deleniti omnis qui atque architecto autem.</p>
+                    </div>
+                    <div class="skill-item">
+                        <p class="skill-head">Bash Scripting</p>
+                        <div class="prgs-bar">
+                            <div class="prg-txt">50%</div>
+                            <div class="bar">
+                                <span class="bash"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="passion ">
+                    <div class="passion-head">
+                        <h1>My <span>Pa<span>ss</span>ion</span><span class="bg-txt">DESIGNING</span></h1>
+                    </div>
+                    <div class="passion-table">
+                        <div class="passion-item ">
+                            <div class="passion-name">
+                                <div class="icon d-flex justify-content-center align-items-center">
+                                    <i class="fa fa-coffee" aria-hidden="true"></i>
+                                </div>
+                                <h4><span>Web</span> Developing</h4>
+                            </div>
+                            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, doloremque?
+                                Assumenda esse debitis quos deleniti omnis qui atque architecto autem.</p>
+                        </div>
+                        <div class="passion-item ">
+                            <div class="passion-name">
+                                <div class="icon d-flex justify-content-center align-items-center">
+                                    <i class="fas fa-bezier-curve "></i>
+                                </div>
+                                <h4>Graphic <span>Designing</span></h4>
+                            </div>
+                            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, doloremque?
+                                Assumenda esse debitis quos deleniti omnis qui atque architecto autem.</p>
+                        </div>
+                        <div class="passion-item ">
+                            <div class="passion-name">
+                                <div class="icon d-flex justify-content-center align-items-center">
+                                    <i class="fab fa-youtube"></i>
+                                </div>
+                                <h4>You<span>tube</span></h4>
+                            </div>
+                            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, doloremque?
+                                Assumenda esse debitis quos deleniti omnis qui atque architecto autem.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="tl-title">
-            <h4><span>Time</span>Line</h4>
-        </div>
-        <div class="timeline">
-            <div class="tl-item">
-                <div class="tl-icon">
-                    <i class="fa fa-briefcase" aria-hidden="true"></i>
-                </div>
-                <p class="tl-duration">2000 - Present</p>
-                <h5>Web Developer<span> - TechnoExponent</span></h5>
-                <p class="details">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, aspernatur porro esse voluptates consectetur vero sequi perspiciatis iste harum atque.
-                </p>
+            <div class="tl-title">
+                <h4><span>Time</span>Line</h4>
             </div>
-            <div class="tl-item">
-                <div class="tl-icon">
-                <i class="fab fa-youtube"></i>
+            <div class="timeline">
+                <div class="tl-item">
+                    <div class="tl-icon">
+                        <i class="fa fa-briefcase" aria-hidden="true"></i>
+                    </div>
+                    <p class="tl-duration">2000 - Present</p>
+                    <h5>Web Developer<span> - TechnoExponent</span></h5>
+                    <p class="details">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, aspernatur porro esse
+                        voluptates consectetur vero sequi perspiciatis iste harum atque.
+                    </p>
                 </div>
-                <p class="tl-duration">2016 - Present</p>
-                <h5>YouTuber<span> - Shadow Boy</span></h5>
-                <p class="details">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, aspernatur porro esse voluptates consectetur vero sequi perspiciatis iste harum atque.
-                </p>
-            </div>
-            <div class="tl-item">
-                <div class="tl-icon">
-                    <i class="fas fa-brush    "></i>
+                <div class="tl-item">
+                    <div class="tl-icon">
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                    <p class="tl-duration">2016 - Present</p>
+                    <h5>YouTuber<span> - Shadow Boy</span></h5>
+                    <p class="details">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, aspernatur porro esse
+                        voluptates consectetur vero sequi perspiciatis iste harum atque.
+                    </p>
                 </div>
-                <p class="tl-duration">2017 - Present</p>
-                <h5>Graphic Designer<span> - Shadow Boy</span></h5>
-                <p class="details">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, aspernatur porro esse voluptates consectetur vero sequi perspiciatis iste harum atque.
-                </p>
+                <div class="tl-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-brush    "></i>
+                    </div>
+                    <p class="tl-duration">2017 - Present</p>
+                    <h5>Graphic Designer<span> - Shadow Boy</span></h5>
+                    <p class="details">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, aspernatur porro esse
+                        voluptates consectetur vero sequi perspiciatis iste harum atque.
+                    </p>
+                </div>
             </div>
-        </div>
         </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
-        <section class="section sec5 contact" id="contact"></section>
+        <section class="section sec5 contact show" id="contact">
+            <div class="con-title">
+                <h1>Contact <span>ME</span><span class="bgtxt">Connect</span></h1>
+            </div>
+            <div class="con-body ">
+                <div class="left-con">
+                    <h3>Contact Me Here</h3>
+                    <p class="abt">For other information<br/>Don't hesitate to reach me out..
+                    </p>
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+                            </div>
+                            <span>Email :</span>
+                            <p>contact.sagarbera@gmail.com</p>
+                        </div>
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                            </div>
+                            <span>Location :</span>
+                            <p>Kolkata,711316</p>
+                        </div>
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fab fa-github    "></i>
+                            </div>
+                            <span>GitHub :</span>
+                            <a href="https://github.com/sboy99">sboy99</a>
+                        </div>
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fab fa-linkedin    "></i>
+                            </div>
+                            <span>LinkedIn :</span>
+                            <a href="https://www.linkedin.com/in/sagar-bera-5264b9214">Sagar Bera</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-con">
+                    <div class="heading d-flex justify-content-center align-items-center">
+                        <h1><span>Message</span> Me</h1>
+                    </div>
+                    <form action="" class="contact-form">
+                        <div class="input-control seg2">
+                            <input type="text" required placeholder="Your Name">
+                            <input type="text" required placeholder="Your Subject">
+                        </div>
+                        <div class="input-control">
+                            <input type="email" required placeholder="Your Mail">
+                        </div>
+                        <div class="input-control">
+                            <textarea name="" id="" cols="10" rows="8" placeholder="Enter Your Message"></textarea>
+                        </div>
+                     <input type="submit" value="Submit" class="submit">
+                    </form>
+
+                </div>
+            </div>
+
+        </section>
     </main>
     <!--------------------------------------CONTROLLER_SECTION--------------------------------------------------->
     <div class="controls d-flex flex-column justify-content-center align-items-center">
