--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="my-component">
     <!--------------------------------------HEADER_SECTION------------------------------------------------------->
-    <header class="section sec1 home" id="home">
+    <header class="section sec1 home show" id="home">
         <div class="blendimg"></div>
         <div class="header-content">
             <div class="left-header">
@@ -222,7 +222,7 @@
         </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
-        <section class="section sec5 contact show" id="contact">
+        <section class="section sec5 contact" id="contact">
             <div class="con-title">
                 <h1>Contact <span>ME</span><span class="bgtxt">Connect</span></h1>
             </div>
