--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="my-component">
     <!--------------------------------------HEADER_SECTION------------------------------------------------------->
-    <header class="section sec1 home show" id="home">
+    <header class="section sec1 home " id="home">
         <div class="blendimg"></div>
         <div class="header-content">
             <div class="left-header">
@@ -48,7 +48,7 @@
     </header>
     <!--------------------------------------MAIN_SECTION--------------------------------------------------------->
     <main>
-        <section class="section sec2 about" id="about">
+        <section class="section sec2 about " id="about">
             <div class="main-title">
                 <h1>About <span>ME</span><span class="bgtxt">My Stats</span></h1>
             </div>
@@ -222,7 +222,7 @@
         </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
-        <section class="section sec5 contact" id="contact">
+        <section class="section sec5 contact show" id="contact">
             <div class="con-title">
                 <h1>Contact <span>ME</span><span class="bgtxt">Connect</span></h1>
             </div>
@@ -286,7 +286,7 @@
         </section>
     </main>
     <!--------------------------------------CONTROLLER_SECTION--------------------------------------------------->
-    <div class="controls d-flex flex-column justify-content-center align-items-center">
+    <div class="controls ">
         <div class="control control-1 activeIt">
             <i class="fa fa-home shift" aria-hidden="true" data-id="home"></i>
             <h3 class="float">Home</h3>
@@ -305,7 +305,7 @@
         </div>
         <div class="control control-5">
             <i class="fa fa-envelope-open shift" aria-hidden="true" data-id="contact"></i>
-            <div class="float d-flex justify-content-left align-items-center">
+            <div class="float">
                 <h3 class="">Contact</h3>
             </div>
         </div>
